[package]
name = "rust_poker_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
emd = "0.1.1"
generator = "0.7.5"
indicatif = "0.17.7"
itertools = "0.12.1"
lazy_static = "1.4"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-datasets = "0.7.0"
ndarray = "0.12.1"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.8.1"
serde = "1.0.196"
serde_json = "1.0.113"
