[package]
name = "rust_poker_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator = "0.7.5"
indicatif = "0.17.7"
itertools = "0.12.1"
lazy_static = "1.4"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.8.1"
serde = "1.0.196"
serde_json = "1.0.113"
